add lightweight installers for some configuration files